infra/apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rd-ingress
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - rd-capstone.local
        - dev.rd-capstone.local
      secretName: cert-manager-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rd-app-ui
                port:
                  number: 80
          - path: /rd-api
            pathType: Prefix
            backend:
              service:
                name: rd-app-api
                port:
                  number: 8080
